--- a/Html/index.html
+++ b/Html/index.html
@@ -3,9 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/81ff21122d.js" crossorigin="anonymous"></script>
     <title>Influenser gears</title>
+    <link rel="stylesheet" href="/Styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="menu-bar">
+            <div class="product-title">
+                <h3>Influencer products</h3>
+            </div>
+            <div class="menu">
+                <a href="">Home</a>
+                <a href="">Products</a>
+                <a href="">Sign up</a>
+                <a href="">Log In</a>
+                <a href="">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </a>
+                <a href="">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </a>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="banar">
+            <article class="banar-text">
+                <h1>Start your Journey as 
+                    Influencer
+                </h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button>
+                   <h5> Preebook now</h5>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </button>
+            </article>
+            <article class="banar-photo">
+                <img src="/Images/main-camera.png" alt="">
+            </article>
+        </section>
+        <section class="market-place">
+
+        </section>
+    </main>
 </body>
 </html>
