--- a/Html/index.html
+++ b/Html/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/81ff21122d.js" crossorigin="anonymous"></script>
+    <!-- poppins font -->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        </style>
+        <!-- poppin font -->
+         <!-- font awesome -->
+         <script src="https://kit.fontawesome.com/81ff21122d.js" crossorigin="anonymous"></script>
+          <!-- font awesome -->
     <title>Influenser gears</title>
     <link rel="stylesheet" href="/Styles/style.css">
 </head>
@@ -44,8 +52,267 @@
                 <img src="/Images/main-camera.png" alt="">
             </article>
         </section>
-        <section class="market-place">
-
+        <section class="brand-list">
+                <div class="logos">
+                    <img src="/logos/Alibaba.svg" alt="">
+                    <img src="/logos/Amazon.svg" alt="">
+                    <img src="/logos/Daraz.pk Logo.svg" alt="">
+                    <img src="/logos/Ebay.svg" alt="">
+                    <img src="/logos/Rakuten.svg" alt="">
+                    <img src="/logos/Target.svg" alt="">
+                    <img src="/logos/Walmart.svg" alt="">
+                </div>
+        </section>
+        <section class="collections">
+            <div class="section-title">
+                <h3>Popular Collection</h3>
+            </div>
+            <div class="gears">
+                <div class="gear">
+                    <div class="gear-img">
+                        <img src="/Images/tripod.png" alt="">
+                    </div>
+                    <div class="gear-title">
+                        <h3>Flex Tripod</h3>
+                    </div>
+                    <div class="price">
+                        <h2>$50.48</h2>
+                    </div>
+                    <div class="rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                        <h3>4.99</h3>
+                    </div>
+                    <div class="gear-details">
+                        Wordwide shifting <br>available <br>Buyers protection possible!
+                    </div>
+                </div>
+                <div class="gear">
+                    <div class="gear-img">
+                        <img src="/Images/mic.png" alt="">
+                    </div>
+                    <div class="gear-title">
+                        <h3>microphone</h3>
+                    </div>
+                    <div class="price">
+                        <h2>$120.48</h2>
+                    </div>
+                    <div class="rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                        <h3>4.99</h3>
+                    </div>
+                    <div class="gear-details">
+                        Wordwide shifting <br>available <br>Buyers protection possible!
+                    </div>
+                </div>
+                <div class="gear">
+                    <div class="gear-img">
+                        <img src="/Images/airpod.png" alt="">
+                    </div>
+                    <div class="gear-title">
+                        <h3>Airbuds</h3>
+                    </div>
+                    <div class="price">
+                        <h2>$100.48</h2>
+                    </div>
+                    <div class="rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                        <h3>4.99</h3>
+                    </div>
+                    <div class="gear-details">
+                        Wordwide shifting <br>available <br>Buyers protection possible!
+                    </div>
+                </div>
+                <div class="gear">
+                    <div class="gear-img">
+                        <img src="/Images/drone.png" alt="">
+                    </div>
+                    <div class="gear-title">
+                        <h3>Drone</h3>
+                    </div>
+                    <div class="price">
+                        <h2>$980.48</h2>
+                    </div>
+                    <div class="rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                        <h3>4.99</h3>
+                    </div>
+                    <div class="gear-details">
+                        Wordwide shifting <br>available <br>Buyers protection possible!
+                    </div>
+                </div>
+                <div class="gear">
+                    <div class="gear-img">
+                        <img src="/Images/lights.png" alt="">
+                    </div>
+                    <div class="gear-title">
+                        <h3>Light Setup</h3>
+                    </div>
+                    <div class="price">
+                        <h2>$1200.00</h2>
+                    </div>
+                    <div class="rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                        <h3>4.99</h3>
+                    </div>
+                    <div class="gear-details">
+                        Wordwide shifting <br>available <br>Buyers protection possible!
+                    </div>
+                </div>
+                <div class="gear">
+                    <div class="gear-img">
+                        <img src="/Images/setup.png" alt="">
+                    </div>
+                    <div class="gear-title">
+                        <h3>Photoshoot set</h3>
+                    </div>
+                    <div class="price">
+                        <h2>$820.40</h2>
+                    </div>
+                    <div class="rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                        <h3>4.99</h3>
+                    </div>
+                    <div class="gear-details">
+                        Wordwide shifting <br>available <br>Buyers protection possible!
+                    </div>
+                </div>
+                <div class="gear">
+                    <div class="gear-img">
+                        <img src="/Images/camera.png" alt="">
+                    </div>
+                    <div class="gear-title">
+                        <h3>Vlogging Camera</h3>
+                    </div>
+                    <div class="price">
+                        <h2>$1800.80</h2>
+                    </div>
+                    <div class="rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                        <h3>4.99</h3>
+                    </div>
+                    <div class="gear-details">
+                        Wordwide shifting <br>available <br>Buyers protection possible!
+                    </div>
+                </div>
+                <div class="gear">
+                    <div class="gear-img">
+                        <img src="/Images/single-light.png" alt="">
+                    </div>
+                    <div class="gear-title">
+                        <h3>Green Screen</h3>
+                    </div>
+                    <div class="price">
+                        <h2>$25.48</h2>
+                    </div>
+                    <div class="rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                        <h3>4.99</h3>
+                    </div>
+                    <div class="gear-details">
+                        Wordwide shifting <br>available <br>Buyers protection possible!
+                    </div>
+                </div>
+                <div class="gear">
+                    <div class="gear-img">
+                        <img src="/Images/action.png" alt="">
+                    </div>
+                    <div class="gear-title">
+                        <h3>Action Camera</h3>
+                    </div>
+                    <div class="price">
+                        <h2>$380.00</h2>
+                    </div>
+                    <div class="rating">
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half-stroke"></i>
+                        </div>
+                        <h3>4.99</h3>
+                    </div>
+                    <div class="gear-details">
+                        Wordwide shifting <br>available <br>Buyers protection possible!
+                    </div>
+                </div>
+            </div>
+            <div class="section-footer">
+                <h5>see more</h5>
+                <i class="fa-solid fa-arrow-right"></i>
+            </div>
+        </section>
+        <section class="featured">
+            <div class="product-photo">
+                <img src="/Images/gear.png" alt="">
+            </div>
+            <div class="product-detail">
+                <h1>Featured products at one place</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor <br> do amet sint. Velit officia consequat duis enim velit mollit. <br> Exercitation veniam consequat sunt nostrud amet.</p>
+                <button><h6>Join now</h6>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </button>
+            </div>
+            
+        </section>
+        <section class="footer">
+            <h2>Influencer products</h2>
+            <p>Copyright © 2020  influencer products </p>
+            <p> All rights reserved</p>
+            <div class="social-medias">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
         </section>
     </main>
 </body>
